<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/spacing_large"
    android:orientation="vertical"
    tools:context=".MainActivity">

  <Button
      android:id="@+id/autocomplete_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_small"
      android:text="@string/autocomplete_button"/>

  <Button
      android:id="@+id/place_and_photo_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_small"
      android:text="@string/place_and_photo_button"/>

  <Button
      android:id="@+id/current_place_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_margin="@dimen/spacing_small"
      android:text="@string/current_place_button"/>

</LinearLayout>

